fix: wierd spacing errors

--- a/front_end/styles/pages/home.css
+++ b/front_end/styles/pages/home.css
@@ -66,7 +66,7 @@
         background-color: var(--main-color);
         margin: 0 5%;
         width: 90%;
-        height: 79%;
+        height: 77%;
         box-sizing: border-box;
         font-size: 1.6em;
         resize: none;
@@ -112,7 +112,7 @@
         background-color: var(--main-color);
         margin: 0 5%;
         width: 90%;
-        height: 52%;
+        height: 50%;
         box-sizing: border-box;
         font-size: 1.6em;
         resize: none;
